update code to fetch desired model from url parameters and pull model path from json file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     
     <div id="infoBox">Part Reference: XYZ</div>
-    <script type="module" src="scripts/display.js"></script>
+    <script type="module" src="display.js"></script>
 
       
 </body>
