--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html>
 <head>
     <style>
+      #banner {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: #333;
+            color: white;
+            font-size: 4vw;
+            padding: 10px;
+            box-sizing: border-box;
+            z-index: 1000;
+        }
         #infoBox {
         position: fixed;
         bottom: 10px;
@@ -25,7 +37,7 @@
     </script>
 </head>
 <body>
-    
+    <div id="banner">eZED</div>
     <div id="infoBox">Part Reference: XYZ</div>
     <script type="module" src="display.js"></script>
 
