--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            background-color: #333;
+            background-color: #e6e6e6;
             color: white;
             font-size: 4vw;
             padding: 10px;
