--- a/index.html
+++ b/index.html
@@ -4,29 +4,32 @@
     <style>
        body { margin: 0; }
         canvas { display: block; }
-      #banner {
+        banner {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
-            background-color: #e6e6e6;
-            color: white;
+            background-color: #d2d2d2;
+            color: rgb(0, 0, 0);
             font-size: 4vw;
-            padding: 10px;
+            padding-left: 10px;
+            padding-top: 7px;
             box-sizing: border-box;
             z-index: 1000;
         }
+
         #infoBox {
-        position: fixed;
-        bottom: 10px;
-        left: 10px;
-        background-color: #333;
-        color: white;
-        font-size: 1.5vw;
-        padding: 10px;
-        border-radius: 10px;
-        box-sizing: border-box;
-        z-index: 1000;
+            position: fixed;
+            bottom: 10px;
+            left: 10px;
+            background-color: #d2d2d2;
+            color: rgb(0, 0, 0);
+            font-size: 1.5vw;
+            padding: 10px;
+            border-radius: 10px;
+            box-sizing: border-box;
+            z-index: 1000;
+            opacity: 0.8;
         }
     </style>
     <script type="importmap">
