Media Queries added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
           z-index: 1000;
           opacity: 0.8;
       }
+      #banner img {
+          max-width: 100%;
+          height: auto;
+      }
+
+      /* Media Queries */
+      @media (max-width: 768px) {
+          #infoBox {
+              font-size: 6vw;
+              padding: 5px;
+          }
+          #banner {
+              padding: 5px;
+          }
+      }
   </style>
     <script type="importmap">
       {
