--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>eZED Model Display</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
       body { margin: 0; }
       canvas { display: block; }
@@ -38,7 +39,7 @@
       /* Media Queries */
       @media (max-width: 768px) {
           #infoBox {
-              font-size: 6vw;
+              font-size: 5vw;
               padding: 5px;
           }
           #banner {
