--- a/index.html
+++ b/index.html
@@ -36,7 +36,22 @@
           z-index: 1000;
           opacity: 0.8;
       }
-    
+      #loading-screen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent white background */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1001; /* Make sure it's above your 3D scene */
+    }
+
+    #loading-message {
+        font-size: 24px;
+    }
       /* Media Queries */
       @media (max-width: 768px) {
           #infoBox {
@@ -58,6 +73,10 @@
     </script>
 </head>
 <body>
+  <div id="loading-screen">
+    <div id="loading-message">Loading...</div>
+</div>
+
   <div id="banner">
       <img src="assets/ezed-web-logo.png" alt="Logo">
   </div>
