loading icon added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
 <body>
   <div id="loading-screen">
     <div id="loading-message">Loading...</div>
+    <div class="content">
+      <!-- Loading animation structure -->
+      <div class="bars">
+        <!-- Repeat .bar for 7 times -->
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
+    </div>
 </div>
 
   <div id="banner">
