--- a/index.html
+++ b/index.html
@@ -36,19 +36,35 @@
         z-index: 1000;
         opacity: 0.8;
     }
-    .loader {
-      border: 16px solid #f3f3f3; /* Light grey */
-      border-top: 16px solid #3498db; /* Blue */
-      border-radius: 50%;
-      width: 120px;
-      height: 120px;
-      animation: spin 2s linear infinite;
-    }
+    #loading-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent white background */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1001; /* Make sure it's above your 3D scene */
+  }
 
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
+  #loading-message {
+      font-size: 24px;
+  }
+  .loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
     /* Media Queries */
     @media (max-width: 768px) {
         #infoBox {
@@ -70,7 +86,11 @@
     </script>
 </head>
 <body>
-  <div class="loader"></div>
+  <div id="loading-screen">
+    <div class="loader"></div>
+    <div id="loading-message">Loading...</div>
+  </div>
+
   <div id="banner">
       <img src="assets/ezed-web-logo.png" alt="Logo">
   </div>
