--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent white background */
+      opacity: 10;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -50,14 +50,15 @@
   }
 
   #loading-message {
-      font-size: 24px;
+      font-size: 5vw;
+      align-self: bottom;
   }
   .loader {
   border: 16px solid #f3f3f3; /* Light grey */
   border-top: 16px solid #3498db; /* Blue */
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
+  width: 10vw;
+  height: 10vh;
   animation: spin 2s linear infinite;
 }
 
