--- a/index.html
+++ b/index.html
@@ -37,30 +37,32 @@
         opacity: 0.8;
     }
     #loading-screen {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      opacity: 10;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      z-index: 1001; /* Make sure it's above your 3D scene */
-  }
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 10;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column; /* Added this to stack items vertically */
+        z-index: 1001; /* Make sure it's above your 3D scene */
+      }
 
-  #loading-message {
-      font-size: 5vw;
-      align-self: bottom;
-  }
-  .loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
-  border-radius: 50%;
-  width: 10vw;
-  height: 10vh;
-  animation: spin 2s linear infinite;
-}
+    #loading-message {
+        font-size: 5vw;
+        margin-top: 10px; /* Add margin to separate from the spinner */
+      }
+    .loader {
+        border: 16px solid #f3f3f3; /* Light grey */
+        border-top: 16px solid #3498db; /* Blue */
+        border-radius: 50%;
+        width: 10vw;
+        height: 10vw;
+        animation: spin 2s linear infinite;
+      }
+
 
 @keyframes spin {
   0% { transform: rotate(0deg); }
