--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <style>
     body { margin: 0; }
     canvas { display: block; }
-
+    @font-face {
+      font-family: century-gothic;
+      src: url(assets/century-gothic/CenturyGothic.ttf);
+    }
     #banner {
       position: fixed;
       top: 0;
@@ -29,6 +32,7 @@
         left: 10px;
         background-color: #d2d2d2;
         color: rgb(0, 0, 0);
+        font-family: century-gothic;
         font-size: 1.5vw;
         padding: 10px;
         border-radius: 10px;
