--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         background-color: #d2d2d2;
         color: rgb(0, 0, 0);
         font-family: century-gothic;
-        font-size: 1.5vw;
+        font-size: 2.5vw;
         padding: 10px;
         border-radius: 10px;
         box-sizing: border-box;
@@ -56,6 +56,7 @@
 
     #loading-message {
         font-size: 3vw;
+        font-family: century-gothic;
         margin-top: 10px; /* Add margin to separate from the spinner */
       }
     .loader {
