--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       left: 0;
       padding: 5px; 
       box-sizing: border-box;
-      border-radius: 10px;
+      border-radius: 0 10 10 0;
       z-index: 1000;
       background-color: #ffffff; 
       }
